# fluxus

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.rst  RELEASE_NOTES.rst  environment.yml  make.py  pypi_description.rst  pyproject.toml  tox.ini
.github/workflows/: fluxus-release-pipeline.yaml  release-pipeline.yaml
condabuild/: meta.yaml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/fluxus/: _consumer.html  _passthrough.html  _producer.html  _warning.html
docs/_modules/fluxus/core/: _base.html  _concurrent.html
docs/_modules/fluxus/core/producer/: _producer_base.html
docs/_modules/fluxus/core/transformer/: _simple.html  _transformer_base.html
docs/_modules/fluxus/functional/: _functions.html  _result.html
docs/_modules/fluxus/functional/conduit/: _producer.html  _step.html
docs/_modules/fluxus/functional/product/: _product.html
docs/_modules/fluxus/lineage/: _label.html
docs/_sources/_generated/: release_notes.rst.txt
docs/_sources/apidoc/: fluxus.rst.txt
docs/_sources/apidoc/fluxus/: fluxus.AsyncConsumer.rst.txt  fluxus.AsyncProducer.rst.txt  fluxus.FlowWarning.rst.txt  fluxus.Passthrough.rst.txt  fluxus.Producer.rst.txt  fluxus.core.rst.txt  fluxus.functional.rst.txt  fluxus.lineage.rst.txt  fluxus.simple.rst.txt  fluxus.util.rst.txt  fluxus.viz.rst.txt
docs/_sources/apidoc/fluxus/core/: fluxus.core.AtomicConduit.rst.txt  fluxus.core.ConcurrentConduit.rst.txt  fluxus.core.Conduit.rst.txt  fluxus.core.SerialSource.rst.txt  fluxus.core.Source.rst.txt  fluxus.core.producer.rst.txt
docs/_sources/apidoc/fluxus/functional/: fluxus.functional.chain.rst.txt  fluxus.functional.conduit.rst.txt  fluxus.functional.parallel.rst.txt  fluxus.functional.product.rst.txt  fluxus.functional.step.rst.txt
docs/_sources/apidoc/fluxus/lineage/: fluxus.lineage.LabelingProducer.rst.txt  fluxus.lineage.LabelingTransformer.rst.txt  fluxus.lineage.LineageOrigin.rst.txt
docs/_sources/apidoc/fluxus/simple/: fluxus.simple.SimpleProducer.rst.txt
docs/_sources/apidoc/fluxus/util/: fluxus.util.simplify_repr_attributes.rst.txt
docs/_sources/apidoc/fluxus/viz/: fluxus.viz.FlowGraphStyle.rst.txt  fluxus.viz.FlowTextStyle.rst.txt  fluxus.viz.TimelineMatplotStyle.rst.txt  fluxus.viz.base.rst.txt
docs/apidoc/: fluxus.html
docs/apidoc/fluxus/: fluxus.Consumer.html  fluxus.Producer.html  fluxus.simple.html  fluxus.viz.html
docs/apidoc/fluxus/core/: fluxus.core.Conduit.html  fluxus.core.SerialConduit.html  fluxus.core.SerialSource.html  fluxus.core.producer.html  fluxus.core.transformer.html
docs/apidoc/fluxus/core/producer/: fluxus.core.producer.ConcurrentProducer.html  (+1 more)
docs/apidoc/fluxus/functional/: fluxus.functional.chain.html  fluxus.functional.passthrough.html  fluxus.functional.product.html  fluxus.functional.run.html
docs/apidoc/fluxus/lineage/: fluxus.lineage.HasLineage.html  fluxus.lineage.LineageOrigin.html
docs/apidoc/fluxus/util/: fluxus.util.simplify_repr_attributes.html
docs/apidoc/fluxus/viz/: fluxus.viz.FlowGraphStyle.html  fluxus.viz.FlowTextStyle.html
docs/docs-version/1-0/: .buildinfo  api_landing.html  faq.html
docs/docs-version/1-0/_generated/: home.html  release_notes.html
docs/docs-version/1-0/contributor_guide/: index.html
docs/user_guide/: index.html
docs/user_guide/introduction_to_fluxus/: building_a_flow.html
sphinx/make/: conf_base.py  make_base.py
sphinx/make/_static/js/: versions.js
sphinx/source/: conf.py  faq.rst  index.rst
sphinx/source/contributor_guide/: index.rst
sphinx/source/user_guide/introduction_to_fluxus/: building_a_flow.ipynb
src/fluxus/: __init__.py  _consumer.py  _flow.py  _passthrough.py  _producer.py  _transformer.py  _warning.py
src/fluxus/base/: __init__.py  _base.py  _concurrent.py  _conduit.py
src/fluxus/base/producer/: __init__.py  _producer_base.py
src/fluxus/base/transformer/: __init__.py  _transformer_base.py
src/fluxus/core/: __init__.py  _base.py  _chained_base_.py  _concurrent.py  _conduit.py
src/fluxus/core/producer/: __init__.py  _chained_.py  _producer_base.py  _simple.py
src/fluxus/core/transformer/: __init__.py  _chained_.py  _simple.py  _transformer_base.py
src/fluxus/functional/: __init__.py  _functions.py  _result.py
src/fluxus/functional/conduit/: __init__.py  _conduit.py  _consumer.py  _producer.py  _step.py
src/fluxus/functional/product/: __init__.py  _product.py
src/fluxus/lineage/: __init__.py  _label.py  _lineage.py
src/fluxus/simple/: __init__.py  _simple.py
src/fluxus/util/: __init__.py  _repr.py
src/fluxus/viz/: __init__.py  _flow.py  _graph.py  _timeline.py
src/fluxus/viz/base/: __init__.py  _style.py
test/fluxus_test/: __init__.py  conftest.py  test_code_integrity.py  test_dict_to_frame.py  test_docstrings.py  test_flow.py  test_functional.py  test_lineage.py
(+90 files in other folders)
