[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "fluxus"
author = "Boston Consulting Group (BCG)"
home-page = "https://github.com/BCG-X-Official/fluxus"
description-file = "pypi_description.rst"
dist-name = "fluxus"
license = "Apache Software License v2.0"

requires = [
    "matplotlib        ~=3.6",
    "pandas            ~=2.1",
    "gamma-pytools     ~=3.0",
    "typing_inspect    ~=0.7",
]

requires-python = ">=3.11,<4a"

[tool.flit.metadata.requires-extra]
dev = [
    # Sphinx documentation build
    "nbsphinx                 ~= 0.9",
    "sphinx                   ~= 7.2",
    "sphinx-autodoc-typehints ~= 1.25",
    "pydata-sphinx-theme      ~= 0.15.1",
    "packaging                ~= 24.1",

    # Notebooks
    "ipywidgets               ~= 8.1",
    "jupyterlab               ~= 4.2",
    "notebook                 ~= 7.2",

    # DevOps
    "pytest                   ~= 8.2",
    "pytest-asyncio           ~= 0.23",
    "pytest-cov               ~= 5.0",
    "pre-commit               ~= 3.7",
]

testing = [
    "pytest                   ~= 8.2",
    "pytest-cov               ~= 5.0",
    "pytest-asyncio           ~= 0.23",
]

[tool.flit.metadata.urls]
Documentation = "https://bcg-x-official.github.io/fluxus/"
Repository = "https://github.com/BCG-X-Official/fluxus"

[build]
# comma-separated list of packages to be built from source in pip min builds
no-binary.min = ["matplotlib"]

[build.matrix.min]
matplotlib        = "~=3.6.3"
pandas            = "~=2.1"
python            = "==3.11"
gamma-pytools     = "~=3.0.0"
typing_inspect    = "~=0.7.1"

[build.matrix.max]
matplotlib        = ">=3.8,<4a"
pandas            = ">=2.2,<3a"
python            = ">=3.12,<4a"
gamma-pytools     = "~=3.0"
typing_inspect    = ">=0.9,<1a"

[tool.black]
required-version = '24.4.2'
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''

[tool.mypy]
show_error_codes = true
strict = true
untyped_calls_exclude = [
    'IPython',
]

[[tool.mypy.overrides]]
module = [
    "graphviz.*",
    "IPython.*",
    "typing_inspect.*",
]
ignore_missing_imports = true